<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    android:id="@+id/main">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            style="@style/MyPhotoStyle"
            android:src="@drawable/my_photo">
        </ImageView>
        <TextView
            style="@style/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name">
        </TextView>
        <TextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title">
        </TextView>
    </LinearLayout>
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                style="@style/IconStyle"
                android:src="@drawable/graduation">
            </ImageView>
            <TextView
                style="@style/Caption"
                android:text="@string/group">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                style="@style/IconStyle"
                android:src="@drawable/phone">
            </ImageView>
            <TextView
                style="@style/Caption"
                android:text="@string/phoneNumber">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                style="@style/IconStyle"
                android:src="@drawable/telegram_icon">
            </ImageView>
            <TextView
                style="@style/Caption"
                android:text="@string/nickname">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                style="@style/IconStyle"
                android:src="@drawable/email">
            </ImageView>
            <TextView
                style="@style/Caption"
                android:text="@string/email">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>